# ParisianBarrier

./: .gitignore  .pre-commit-config.yaml  README.md  fix.py  import QuantLib as ql.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_Parisian_Barrier_Demo.ipynb  01_simulate_paths.ipynb  02_payoff_logic.ipynb  03_hedge_analysis.ipynb
results/: artifact_index.txt  bench_cjy_lat_mc.csv  bench_cjy_pde_mc.csv  benchmark_all.csv  benchmark_cjy_vs_pde_mc.csv  benchmark_lat_pde_mc.csv  cjy_filtered_points.csv  cjy_filtered_relerr_by_bins.csv  cjy_map_pilot.csv  cjy_summary_pilot.csv  convergence_lattice.csv  curve_cumulative_with_ml.csv  dataset_parisian_gbm_pricing.csv  env_eval_vanilla.csv  fig_sweep_D_cv.csv  fig_sweep_D_cv_mono.csv  grid_mc_lat.csv  healthcheck_config.json  healthcheck_summary.csv  heatmap_B_D_binned_oof.csv  hedge_baseline_pnl.csv  hedge_best_by_cost.csv  hedge_compare.csv  hedge_sweep.csv  key_metrics.csv  master_summary.json  master_summary.md  mc_bb_vs_noBB.csv  mc_bias_vs_steps.csv  mc_convergence_paths.csv  mc_mlmc_quick.csv  mc_varred.csv  mc_vs_pde_fast.csv  oof_worst20_mono.csv  oof_worst20_raw.csv  parisian_grid_bench.csv  parisian_plain_bench.csv  pde_prices_fast.csv  runtime_parisian.csv  slice_B.csv  (+15 more)
scripts/: benchmark.py  grid_pricing.py  hedge_compare.py  test.py
src/: __init__.py
streamlit_app/: app.py  pricing_dashboard.py  simulation_dashboard.py  validation_dashboard.py
tests/: test_cumulants.py  test_gbm.py  test_parisian_price.py
thesis_assets/: MANIFEST.json  README.md  latex_includes.tex
(+70 files in other folders)
