[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parisian-barrier-desk"
version = "0.1.0"
description = "Desk prototype to price and stress-test Parisian barrier options with Monte Carlo."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Fabrice Sashinkumar" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]
